--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vite": "^5.0.6"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1"
